# ptperf

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: analysis.ipynb
notebooks/.ipynb_checkpoints/: analysis-checkpoint.ipynb
run/: compile.sh  debug.sh  flan.sh  gemma.sh  pythia-base.sh  pythia.sh  run.sh
src/ptperf/: callbacks.py  cli.py  collect.py  datasets.py  logging.py  modeling.py  scripts.py  types.py
src/ptperf/datasets/: samsum.py  wikitext.py
src/ptperf/scripts/: __init__.py
tests/: conftest.py  test_causal.py  test_cli.py  test_scripts.py  test_seq.py
