[project]
name = "ptperf"
version = "0.1.0"
description = "Prompt Based Fine-Tuning Hardware Performance"
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "flash-linear-attention==0.4.2",
    "sentencepiece==0.2.1",
    "bitsandbytes==0.49.2",
    "transformers==5.5.2",
    "tiktoken==0.12.0",
    "datasets==4.8.4",
    "mlflow==3.10.1",
    "typer==0.24.1",
    "peft==0.18.1",
]

[dependency-groups]
dev = [
    "pytest-xdist==3.8.0",
    "pytest==9.0.2",
    "ruff==0.15.11",
    "ty==0.0.31",
]

[project.optional-dependencies]
cpu = ["torch==2.10.0"]
cu128 = [
    "causal-conv1d==1.6.1",
    "flash-attn==2.8.3",
    "torch==2.10.0",
]
rocm72 = [
    "torch@https://download.pytorch.org/whl/rocm7.2/torch-2.10.0%2Brocm7.2-cp314-cp314-manylinux_2_28_x86_64.whl",
    "triton-rocm@https://download-r2.pytorch.org/whl/triton_rocm-3.6.0-cp314-cp314-linux_x86_64.whl",
    "causal-conv1d==1.6.1",
    "flash-attn==2.8.3",
]

[project.scripts]
cli = "ptperf.cli:app"

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["A", "F", "E", "W", "I", "C4", "FA", "UP", "RUF", "SIM", "ARG", "ANN"]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
        { extra = "rocm72" },
    ],
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-rocm72", extra = "rocm72" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true
